# rtc_harmony_demo

./: README.md
NERtcSDKDemo/: build-profile.json5
NERtcSDKDemo/AppScope/: app.json5
NERtcSDKDemo/AppScope/resources/base/element/: string.json
NERtcSDKDemo/AppScope/resources/rawfile/: input_48k_ch2.opus  output.h264  test.h264
NERtcSDKDemo/AppScope/resources/rawfile/hermes/: 01_POLQA.pcm  anquantong.yuv  face_720x1280_15.yuv  output.h264
NERtcSDKDemo/entry/: .gitignore  build-profile.json5  oh-package.json5
NERtcSDKDemo/entry/src/main/: module.json5
NERtcSDKDemo/entry/src/main/cpp/: CMakeLists.txt  napi_init.cpp  video_capture_processing.cpp  video_capture_processing.h  video_render_processing.cpp  video_render_processing.h
NERtcSDKDemo/entry/src/main/cpp/beauty/: authpack-ohos-wy_2025-02-13-18-2.h  fu_video_constants.h  video_fu_render.cpp  video_fu_render.h
NERtcSDKDemo/entry/src/main/cpp/render/: demo_render.cpp  demo_render.h  demo_render_manager.cpp  demo_render_manager.h
NERtcSDKDemo/entry/src/main/cpp/types/libdataprocessing/: index.d.ts  oh-package.json5
NERtcSDKDemo/entry/src/main/ets/common/: ARC4.ets  Config.ets  FileUtil.ets  Handle.ets  RtcDemoCallback.ets  RtcDemoFileManager.ets  RtcDemoLogic.ets  RtcDemoTimeUtil.ets  TaskPoolTest.ets
NERtcSDKDemo/entry/src/main/ets/entryability/: EntryAbility.ets
NERtcSDKDemo/entry/src/main/ets/model/: DemoUser.ts  common.ts
NERtcSDKDemo/entry/src/main/ets/pages/: About.ets  Call.ets  Chat.ets  Home.ets  LiveStreamingKit.ets  LowLatency.ets  MultiRender.ets  Preview.ets  Settings.ets
NERtcSDKDemo/entry/src/main/ets/pages/beauty/: BeautyFilterView.ets
NERtcSDKDemo/entry/src/main/ets/pages/beauty/services/: BeautyDataService.ets
NERtcSDKDemo/entry/src/main/ets/pages/beauty/viewModels/: BeautyFilterViewModel.ets  BeautyShapeViewModel.ets  BeautySkinViewModel.ets
NERtcSDKDemo/entry/src/main/ets/pages/chat/: ChatModel.ts  Delegate.ets  ModelHandleUtils.ts  NERtcAIHowlingObserver.ets  PackageObserver.ets  PreDecodeObserver.ets  Presenter1.ets  RtcDefaultCallbackEx.ets  RtcLogicModel.ets  Worker.ets
NERtcSDKDemo/entry/src/main/ets/pages/chat/dialog/: CallDetailDialog.ets  EditTextBaseDialog.ets  MediaRelayDialog.ets  MoreFunction.ets  RTCDemoView.ets  StartPKDialog.ets  StartSeatDialog.ets  SubDetailDialog.ets  WhiteBlackListDialog.ets
NERtcSDKDemo/entry/src/main/ets/pages/home/dialog/: StartProbeDialog.ets
NERtcSDKDemo/entry/src/main/ets/pages/settings/model/: common.ts
NERtcSDKDemo/entry/src/main/ets/pages/settings/tab/: AudioEffectSettings.ets  AudioSettings.ets  DumpSettings.ets  OtherSettings.ets  VideoMultiSetting.ets  VideoSetting.ets
NERtcSDKDemo/entry/src/main/ets/pages/settings/view/: NetEaseInputLogicDialog.ets  NetEaseListLogicDialog.ets
NERtcSDKDemo/entry/src/main/ets/pages/textureTest/: Constants.ts  DisplayCalculator.ts  Index.ets  KComponentView.ets
NERtcSDKDemo/entry/src/main/ets/ui/: TextInputDialog.ets  TextListDialog.ets
NERtcSDKDemo/entry/src/main/resources/base/element/: string.json
NERtcSDKDemo/entry/src/main/resources/base/profile/: main_pages.json
document/: CHANGELOG.md  DEMOUSEAGE.md
